update routing
